# Wallet-Service

./: .env.example  .gitignore  INSTRUCTIONS.md  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  walletservice.db
Api Calls/: bruno.json
Api Calls/auths/: Google Callback.bru  Google Login.bru  folder.bru
Api Calls/keys/: CreateKey.bru  RollOver.bru  p.bru
Api Calls/wallet/: Balance.bru  Deposit Reference.bru  Deposit.bru  Transactions.bru  Webhook.bru
alembic/: env.py
alembic/versions/: 10c44b85d7d4_creating_transaction.py  53380654ce05_creating_transaction.py  63457abe5c48_created_one_to_one_relationship.py  8b036996319a_remved_username_from_user_table.py  920cad2313f8_initializing_databse.py  9a1610655735_initializing_databse.py
app/: core.py  database.py  deps.py  models.py  schemas.py
app/routers/: auth.py  keys.py  wallet.py
